<resources>
<!--	<string name="app_name">Zofers</string>-->

	<!--actions-->
	<string name="action_next">NEXT</string>
	<string name="action_finish">FINISH</string>
	<string name="action_settings">Settings</string>
	<string name="action_edit">Edit</string>
	<string name="action_favorite">Favorite</string>
	<string name="action_delete">Delete</string>
	<string name="action_ok">OK</string>
	<string name="action_create">create</string>
	<string name="action_report">Report</string>
	<string name="action_block">Block User</string>


	<!-- Strings related to login -->
	<string name="prompt_name">Name</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="prompt_confirm_password">Confirm Password</string>
	<string name="prompt_new_password">New Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="sign_in_google" translatable="false">Continue with Google</string>
	<string name="sign_in_facebook" translatable="false">Sign in with facebook</string>
	<string name="action_register">Register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_busy_email">This email address already registered</string>
	<string name="error_short_password">This password is too short</string>
	<string name="error_passwords_not_match">Passwords do not match</string>
	<string name="error_incorrect_credentials">Incorrect email or password</string>
	<string name="error_field_required">required</string>
	<string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email completions."</string>
	<string name="image_permission_denied" translatable="false">Permission denied</string>
	<string name="sign_out">Sign Out</string>


	<!--create offer-->
	<string name="title_activity_create_offer">Create new offer</string>
	<string name="title_edit_offer">Edit offer</string>
	<string name="cost_mode_free">Free for you</string>
	<string name="cost_mode_part">You pay part (%s)</string>
	<string name="cost_mode_full">You pay %s</string>

	<string name="cost_mode_free_my">Free for guest</string>
	<string name="cost_mode_part_my">Guest pays part of cost</string>
	<string name="cost_mode_full_my">Guest pays</string>
	<string name="create_offer_city">City</string>

	<!--home page-->
	<string name="title_activity_home" translatable="false">HomeActivity</string>

	<string name="action_search">Search activity or city</string>
	<string name="filters">filters</string>

	<!-- offer page-->
	<string name="interested">Interested</string>
	<string name="pending_approval">Request Sent</string>
	<string name="approved">approved</string>
	<string name="for_someone">for %s</string>

	<!--	profile page-->
	<string name="profile_offers_section_title">Offers</string>
	<string name="profinle_private_section_title">Private Images</string>


	<!--other-->
	<plurals name="for_men">
		<item quantity="one">%d man</item>
		<item quantity="other">%d man</item>
	</plurals>

	<plurals name="for_woman">
		<item quantity="one">%d woman</item>
		<item quantity="other">%d women</item>
	</plurals>

	<plurals name="for_person">
		<item quantity="one">%d person</item>
		<item quantity="other">%d persons</item>
	</plurals>

	<string-array name="gender_list">
		<item>Not Selected</item>
		<item>Male</item>
		<item>Female</item>
		<item>Custom</item>
	</string-array>

	<string name="title_activity_offer" translatable="false">OfferActivity</string>
	<string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>

	<string name="title_home">Home</string>
	<string name="title_profile">Profile</string>
	<string name="title_notifications">Messages</string>
	<string name="date_format_now">now</string>
	<string name="date_format_day" translatable="false">%1$d/%2$d/%3$d</string>
	<string name="messenger_write_messaage_hint">Type a message</string>
	<string name="action_decline">DECLINE</string>
	<string name="action_accept">ACCEPT</string>
	<string name="messenger_cannot_respond" translatable="false">You can\'t respond to this conversation</string>
	<string name="this_offer_is_for">This offer for:</string>

	<plurals name="date_format_relative_minutes">
		<item quantity="one">%d min</item>
		<item quantity="other">%d mins</item>
	</plurals>
	<plurals name="date_format_relative_hours">
		<item quantity="one">%d hr</item>
		<item quantity="other">%d hrs</item>
	</plurals>
	<plurals name="date_format_relative_mons">
		<item quantity="one">%d month</item>
		<item quantity="other">%d months</item>
	</plurals>
	<plurals name="date_format_relative_years">
		<item quantity="one">%d year</item>
		<item quantity="other">%d years</item>
	</plurals>
	<plurals name="date_format_relative_days">
		<item quantity="one">%d day</item>
		<item quantity="other">%d days</item>
	</plurals>

	<string name="facebook_app_id" translatable="false">685025355658566</string>
	<string name="fb_login_protocol_scheme" translatable="false">fb685025355658566</string>
    <string name="action_save">Save</string>
    <string name="country">Country</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_profile">Edit Profile</string>
	<string name="description">About You</string>
	<string name="name">Name</string>
	<string name="no_messages_yet">No messages yet</string>
	<string name="messenger_sent">sent</string>
	<string name="messenger_seen">seen</string>
	<string name="no_description">No bio for this user</string>
	<string name="reset_password">Reset Password</string>
	<string name="send_email">Send Email</string>
	<string name="enter_email_hint">Enter your email</string>
	<string name="no_private_images">No private images</string>
	<string name="interested_alert">The offer owner received your request.\n After approvement you can chat and meet</string>
	<string name="do_not_show_again">Do not show again</string>
	<string name="happy_nice_cool_awesome">Awesome!</string>
	<string name="request_canceled">Request Canceled</string>
    <string name="how_much_the_guest_pays">How much the guest pays</string>
	<string name="guest">guest</string>
	<string name="currency">Currency</string>
	<string name="both">both</string>
	<string name="me">me</string>
	<string name="messages">Messages</string>
	<string name="select_country">Select Country</string>
	<string name="who_will_pay_expenses">who will pay expenses for this offer?</string>
	<string name="offer_details_hint">Describe offer details</string>
	<string name="offer_name_hint">Offer Name</string>
	<string name="people_count">People Count (optional)</string>
	<string name="gender_optional">Gender (optional)</string>
	<string name="requirements_optional">Requirements (optional)</string>
	<string name="availability_optional">Availability (optional)</string>
	<string name="requirements_hint" translatable="false">eg: 20–40 years old</string>
	<string name="availability_hint" translatable="false">eg: not working hours</string>
    <string name="loading_random_image">Loading Random Image</string>
	<string name="delete_image_warning_message">Do you want to delete this image?</string>
	<string name="delete_offer_warning_message">Do you want to delete this offer?</string>
	<string name="message_conversation_accept">Conversation request accepted</string>
	<string name="conversation_list_update_error" translatable="false">Couldn\'t update conversations</string>
    <string name="privacy_policy">Privacy Policy</string>
	<string name="terms_an_conditions">Terms an Conditions</string>
	<string name="successfully_reported">Report accepted. You will no longer see this offer</string>
	<string name="successfully_blocked">User blocked</string>
	<string name="you_don_t_have_any_offers_yet">You don\'t have any offers yet</string>
	<string name="no_offers">No offers</string>


</resources>
