<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.offer.OfferActivity">
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="1"
            android:title="@string/edit_profile"
            app:showAsAction="never" />

    <item
            android:id="@+id/edit_password"
            android:orderInCategory="2"
            android:title="@string/edit_password"
            app:showAsAction="never" />

    <item
            android:id="@+id/terms"
            android:orderInCategory="3"
            android:title="@string/terms_an_conditions"
            app:showAsAction="never" />

    <item
            android:id="@+id/privacy"
            android:orderInCategory="4"
            android:title="@string/privacy_policy"
            app:showAsAction="never" />

    <item
            android:id="@+id/log_out"
            android:orderInCategory="5"
            android:title="@string/sign_out"
            app:showAsAction="never" />
</menu>
