<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_background"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:textSize="14sp"
                        tools:text="Mkhitar Heratsi" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/description_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi"
                        android:hint="@string/description"
                        android:inputType="textCapWords"
                        android:textSize="14sp"
                        tools:text="Mkhitar Heratsi" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp"
                        tools:text="s@s.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/country"
                    android:textSize="12sp"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/country_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:visibility="gone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="4dp"
                    android:background="@color/gray"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/edit_save_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/action_save"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</layout>